Nuthatch API v2. Added paging and organized routes
