# web/swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "description": "Nuthatch api - an api for birding",
-    "version": "1.1.0",
+    "version": "2.0.0",
     "title": "Nuthatch api",
     "contact": {
       "email": "lastelmsoft@gmail.com"
@@ -25,11 +25,106 @@
   ],
   "schemes": ["https", "http"],
   "paths": {
-    "/birds": {
+    "/v2/birds": {
       "get": {
         "tags": ["birds"],
+        "summary": "Get Birds List v2",
+        "description": "Retrieve a paged list of birds",
+        "operationId": "getBirdsV2",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Which page to fetch",
+            "required": false,
+            "default": 1,
+            "type": "integer"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "description": "Size of page to fetch. Max 100",
+            "required": false,
+            "default": 25,
+            "type": "integer"
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "description": "Common name",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "sciName",
+            "in": "query",
+            "description": "Scientific name",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "description": "Scientific order",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "family",
+            "in": "query",
+            "description": "Scientific family",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "status",
+            "in": "query",
+            "description": "Conservation status",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "region",
+            "in": "query",
+            "description": "Geographical region",
+            "required": false,
+            "type": "string",
+            "enum": ["North America", "Western Europe"]
+          },
+          {
+            "name": "operator",
+            "in": "query",
+            "description": "operator to use",
+            "required": false,
+            "type": "enum",
+            "enum": ["AND", "OR"],
+            "default": "AND"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "object",
+              "$ref": "#/definitions/PagedResponse"
+            }
+          },
+          "400": {
+            "description": "Invalid status value"
+          },
+          "401": {
+            "description": "Unauthorized. Try providing an API-Key header"
+          }
+        }
+      }
+    },
+    "/birds": {
+      "get": {
+        "deprecated": true,
+        "tags": ["birds"],
         "summary": "Get Birds List",
-        "description": "Retrieve a list of birds",
+        "description": "Retrieve a list of birds - Limited to 200",
         "operationId": "getBirds",
         "produces": ["application/json"],
         "parameters": [
@@ -117,10 +212,8 @@
           "200": {
             "description": "successful operation",
             "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/BirdPlus"
-              }
+              "type": "object",
+              "$ref": "#/definitions/BirdPlus"
             }
           },
           "400": {
@@ -268,6 +361,28 @@
       },
       "json": {
         "name": "Recording"
+      }
+    },
+    "PagedResponse": {
+      "type": "object",
+      "properties": {
+        "page": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "pageSize": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "entities": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Bird"
+          }
+        }
+      },
+      "json": {
+        "name": "PagedResponse"
       }
     }
   }
